--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "@emotion/styled": "^11.14.0",
     "electron-is-dev": "^3.0.1",
     "emotion-reset": "^3.0.1",
+    "firebase": "^11.6.0",
+    "jotai": "^2.12.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
