setup: 개발용 세팅 추가

--- a/main/tsconfig.electron.json
+++ b/main/tsconfig.electron.json
@@ -9,5 +9,5 @@
     "allowSyntheticDefaultImports": true,
     "strict": true
   },
-  "include": ["./main.ts", "./types.d.ts"]
+  "include": ["./main.ts", "../vite-env.d.ts"]
 }
