--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "date-fns": "^4.1.0",
     "electron-is-dev": "^3.0.1",
     "emotion-reset": "^3.0.1",
     "firebase": "^11.6.0",
