--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "emotion-reset": "^3.0.1",
     "firebase": "^11.6.0",
     "jotai": "^2.12.2",
+    "lodash": "^4.17.21",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@types/lodash": "^4.17.16",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
