feat: 닫기 로직 완성
* json 파일 합쳐줌
* prload 위치 변경
* vite 설정 변경

--- a/tsconfig.main.json
+++ b/tsconfig.main.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "outDir": "../dist/main",
-    "module": "ESNext",
+    "outDir": "./dist/main",
+    "module": "CommonJS",
     "target": "ES2022",
     "lib": ["ES2022", "DOM"],
     "moduleResolution": "node",
@@ -9,5 +9,5 @@
     "allowSyntheticDefaultImports": true,
     "strict": true
   },
-  "include": ["./main.ts", "../vite-env.d.ts"]
+  "include": ["main/*.ts", "./vite-env.d.ts"]
 }
