--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
     "vite": "^6.2.0",
+    "vite-plugin-svgr": "^4.3.0",
     "wait-on": "^8.0.3"
   }
 }
