--- a/package.json
+++ b/package.json
@@ -29,9 +29,13 @@
       "makers": [
         {
           "name": "@electron-forge/maker-dmg",
+          "platforms": [
+            "darwin"
+          ],
           "config": {
-            "overwrite": true,
-            "format": "ULFO"
+            "icon": "assets/icon.icns",
+            "format": "ULFO",
+            "overwrite": true
           }
         },
         {
@@ -44,7 +48,10 @@
           "name": "@electron-forge/maker-squirrel",
           "platforms": [
             "win32"
-          ]
+          ],
+          "config": {
+            "setupIcon": "assets/icon.ico"
+          }
         }
       ]
     }
