--- a/package.json
+++ b/package.json
@@ -9,14 +9,12 @@
     "kill": "node ./scripts/kill-port.js",
     "dev": "npm-run-all kill build:main --parallel start:vite start:electron:dev",
     "start:vite": "vite",
-    "start:electron": "wait-on http://localhost:5173 && npm run electron",
     "start:electron:dev": "wait-on http://localhost:5173 && cross-env NODE_ENV=dev electron dist/main/main.js",
     "build:main": "tsc -p ./tsconfig.main.json",
     "build:ui": "vite build",
-    "start": "electron-forge start",
-    "package": "electron-forge package",
-    "make": "npm-run-all build:main build:ui forge:make",
-    "forge:make": "electron-forge make"
+    "build": "npm-run-all build:main build:ui",
+    "make": "npm run build && electron-builder --config electron-builder.config.js",
+    "postinstall": "electron-builder install-app-deps"
   },
   "win": {
     "target": "nsis",
@@ -42,14 +40,6 @@
     "uuid": "^11.1.0"
   },
   "devDependencies": {
-    "@electron-forge/cli": "^7.8.0",
-    "@electron-forge/maker-deb": "^7.8.0",
-    "@electron-forge/maker-dmg": "^7.8.0",
-    "@electron-forge/maker-rpm": "^7.8.0",
-    "@electron-forge/maker-squirrel": "^7.8.0",
-    "@electron-forge/maker-zip": "^7.8.0",
-    "@electron-forge/plugin-auto-unpack-natives": "^7.8.0",
-    "@electron-forge/plugin-fuses": "^7.8.0",
     "@electron/fuses": "^1.8.0",
     "@eslint/js": "^9.21.0",
     "@types/lodash": "^4.17.16",
@@ -58,7 +48,8 @@
     "@vitejs/plugin-react": "^4.3.4",
     "concurrently": "^9.1.2",
     "cross-env": "^7.0.3",
-    "electron": "^36.0.1",
+    "electron": "^35.1.4",
+    "electron-builder": "^26.0.12",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
